# tokei_rs

./: .gitignore  Cargo.toml  Dockerfile  Earthfile  LICENSE-APACHE  LICENSE-MIT  README.md  compose.yml  cron  initdb.sql  nginx.conf  setup  tokei_rs.service
.github/: dependabot.yml
.github/workflows/: deploy.yml  rust.yml
k8s/: ingress.yaml  rbac.yaml  tokei.yaml  traefik.yaml
src/: main.rs
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf
