[package]
authors = ["Erin Power <xampprocky@gmail.com>"]
name = "tokei_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokei = "12.1"
dotenv = "0.15"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
log = "0.4"
once_cell = "1.14"
cached = "0.39"
actix-web = "4.2"
eyre = "0.6"
env_logger = "0.9"
rsbadges = "1.1"